# synapse-ai

./: .codacy.yaml  .env.docker  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  README.md  docker-compose.yml  package.json  pyproject.toml  setup.ps1  setup.py  setup.sh
.github/workflows/: ci.yml  docker-build.yml  install.yml  nightly.yml  publish.yml
backend/: requirements-test.txt  requirements-worker.txt  requirements.txt  worker_main.py
backend/core/: agent_logger.py  builder_tools.py  compaction.py  config.py  internal_auth.py  llm_providers.py  mcp_client.py  models.py  models_orchestration.py  openapi_import.py  react_engine.py  s3_storage.py  schedule_logger.py  scheduler.py  server.py  tools.py  tools_registry.py  vault.py
backend/core/cache/: response_cache.py
backend/core/native_builder/: __init__.py  orchestration.json
backend/core/native_builder/agents/: agent_creator.json  saver_create.json  saver_update.json
backend/core/orchestration/: engine.py  logger.py  steps.py
backend/core/routes/: agents.py  api_v1.py  api_v2.py  auth.py  builder.py  chat.py  data.py  orchestrations.py  repos.py  scale.py  tools.py  vault.py
backend/core/scale/: config.py  context.py  db.py  event_bridge.py  heartbeat.py  llm_keys.py  metrics.py  models_db.py  pubsub.py  state_pg.py  sync.py  telemetry.py  webhook.py  worker.py  worker_engine_adapter.py  worker_server_module.py
backend/services/: code_indexer.py
backend/tests/: README.md  conftest.py
backend/tests/_fakes/: __init__.py  engine_events.py  fake_http.py  fake_llm.py  fake_pg.py  fake_redis_stream.py  seed.py
backend/tests/api_app/: test_agents_routes.py  test_chat.py  test_edge_cases.py  test_orchestration_realrun.py  test_orchestrations.py  test_routes_crud.py  test_routes_deep.py  test_routes_extra.py  test_routes_final.py  test_routes_remainder.py  test_routes_smoke.py  test_smoke_harness.py
backend/tests/api_v1/: test_auth_gate.py  test_v1_auth.py  test_v1_chat.py  test_v1_orchestrations.py
backend/tests/api_v2/: test_v2_backpressure.py  test_v2_contract.py  test_v2_status_events.py  test_v2_streaming.py
backend/tests/install/: test_install_smoke.py
backend/tests/integration/: test_v2_end_to_end.py
backend/tests/security/: test_mcp_stdio_registration.py
backend/tests/stress/: conftest.py  load_harness.py  test_stress_chat.py  test_stress_orchestration.py  test_stress_sse.py
backend/tests/unit/: test_cache.py  test_cli_auth_detection.py  test_engine_paths.py  test_llm_bodies.py  test_llm_cloud_bodies.py  test_llm_dispatch.py  test_llm_providers.py  test_openapi_import.py  test_orchestration_engine_deep.py  test_orchestration_execcov.py  test_orchestration_stepcov.py  test_orchestration_steps.py  test_react_engine_deep.py  test_react_engine_parsing.py  test_react_internals.py  test_utilities.py
backend/tools/: code_search.py  file_reader.py  sandbox.py  web_scraper.py
docker/: entrypoint.sh
frontend/: next.config.ts
frontend/src/: proxy.ts
frontend/src/app/: page.tsx
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/app/settings/: layout.tsx
frontend/src/components/: SettingsView.tsx
frontend/src/components/orchestration/: BuilderPanel.tsx  StepConfigPanel.tsx  StepNode.tsx  WorkflowCanvas.tsx
frontend/src/components/settings/: APIKeysTab.tsx  AgentsTab.tsx  CustomToolsTab.tsx  GeneralTab.tsx  LogsTab.tsx  ModelsTab.tsx  OpenApiImport.tsx  OrchestrationTab.tsx  ReposTab.tsx  ScaleTab.tsx  SupportTab.tsx  UsageTab.tsx  VaultTab.tsx  index.ts  types.ts
frontend/src/components/settings/import-export/: ExportView.tsx  ImportView.tsx  types.ts  utils.ts
frontend/src/lib/: backend.ts  sse.ts
frontend/src/types/: index.ts  orchestration.ts
infra/: prometheus.yml
infra/k8s/: api-deployment.yaml  pgbouncer-deployment.yaml  worker-deployment.yaml  worker-scaledobject.yaml
scripts/: clean-pycache.js  postinstall.js  preuninstall.js
synapse/: cli.py  setup_wizard.py
