[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-orch-ai"
version = "1.8.3"
description = "Synapse - A Multi Agent Orchestrator"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11,<3.14"
keywords = ["ai", "agent", "mcp", "llm", "orchestrator", "local", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cffi>=2.0.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "mcp>=1.0",
    "chromadb>=0.5",
    "ollama>=0.2",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "duckduckgo-search>=6.0",
    "boto3>=1.34",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
    "pypdf>=4.0",
    "pdfplumber>=0.10",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "requests>=2.31",
    "anthropic>=0.28",
    "crawl4ai>=0.4",
    "psycopg[binary]>=3.0",
    "psycopg-pool>=3.0",
    "cocoindex>=0.3.30,<1.0",
    "python-telegram-bot>=20.0",
    "discord.py>=2.3",
    "slack-bolt>=1.18",
    "pyyaml>=6.0",
]

[project.scripts]
synapse = "synapse.cli:main"
"synapse-ai" = "synapse.cli:main"

[project.urls]
Homepage = "https://github.com/synapseorch-ai/synapse-ai"
Repository = "https://github.com/synapseorch-ai/synapse-ai"
Issues = "https://github.com/synapseorch-ai/synapse-ai/issues"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
artifacts = [
    "synapse/_frontend/**",
]
include = [
    "synapse/",
    "backend/core/",
    "backend/services/",
    "backend/tools/",
    "backend/main.py",
    "backend/requirements.txt",
    "backend/requirements-coding.txt",
    "backend/requirements-messaging.txt",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-html>=4.0",
    "pytest-cov>=5.0",
    "fakeredis>=2.20",
    "httpx>=0.27",
]

[tool.coverage.run]
source = ["core"]
branch = false
# Omit modules that are inherently external/runtime and cannot be meaningfully
# unit-tested (they need a live ARQ worker, real Redis/Postgres, chat-platform
# bot connections, or spawned MCP/CLI subprocesses). These are exercised by the
# nightly integration job (.github/workflows/nightly.yml) instead.
omit = [
    "*/core/scale/worker.py",
    "*/core/scale/worker_engine_adapter.py",
    "*/core/scale/worker_server_module.py",
    "*/core/scale/sync.py",
    "*/core/scale/telemetry.py",
    "*/core/scale/metrics.py",
    "*/core/scale/heartbeat.py",
    "*/core/scale/db.py",
    "*/core/scale/models_db.py",
    "*/core/messaging/*",
    "*/core/mcp_client.py",
    "*/core/mcp_oauth_state.py",
    "*/core/scheduler.py",
    "*/core/schedule_logger.py",
    "*/core/native_builder/*",
    "*/core/builder_tools.py",
    # Integration-only: app lifespan wiring, scale admin, chat-builder streaming,
    # vector memory (chromadb + embeddings), and AWS S3 — validated by the
    # nightly integration job and manual/e2e, not unit tests.
    "*/core/server.py",
    "*/core/routes/scale.py",
    "*/core/routes/builder.py",
    "*/core/memory.py",
    "*/core/s3_storage.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "\\.\\.\\.",
    "except ImportError",
]

[tool.pytest.ini_options]
# Invoke from the repo root: `python -m pytest`
testpaths = ["backend/tests"]
asyncio_mode = "auto"
# The deploy gate runs the fast suite only; stress/integration are opt-in.
addopts = "-m 'not stress and not integration' -ra"
markers = [
    "stress: long-running load tests (5-90s fake-LLM latency); excluded from the gate",
    "integration: needs real Redis/Postgres/ARQ; run nightly, excluded from the gate",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.bandit]
targets = ["backend", "synapse"]
exclude_dirs = [
    "backend/venv",
    "backend/.venv",
    "backend/data",
    "backend/logs",
    "backend/chroma_db",
    "backend/tests",
]
skips = []
